fix: fix issue where donate modal was visible when disabled download button was clicked - remove heart icon and captalize text in donate button

--- a/web/src/components/pages/datasets/donate-modal/donate-modal.css
+++ b/web/src/components/pages/datasets/donate-modal/donate-modal.css
@@ -108,6 +108,7 @@ body.ReactModal__Body--open {
                         border-radius: 8px;
                         background: var(--blue);
                         color: var(--white);
+                        text-transform: capitalize;
                     }
                 }
             }
